package com.digiventure.ventnote.commons

object TestTags {
    // Pages test tags
    const val NOTES_PAGE = "notes_feature"
    const val NOTE_DETAIL_PAGE = "note_detail_page"
    const val NOTE_CREATION_PAGE = "note_creation_page"
    const val SHARE_PAGE = "share_page"
    const val TAG_MANAGER_PAGE = "tag_manager_page"

    // Appbar test tags
    const val TOP_APPBAR = "top_appbar"

    // Bottom sheet test tags
    const val BOTTOM_SHEET = "bottom_sheet"

    const val DELETE_ICON_BUTTON = "delete_icon_button"
    const val SORT_ICON_BUTTON = "sort_icon_button"
    const val CLOSE_SELECT_ICON_BUTTON = "close_select_icon_button"
    const val MENU_ICON_BUTTON = "menu_icon_button"
    const val TOP_APPBAR_TITLE = "top_appbar_title"
    const val TOP_APPBAR_TEXT_FIELD = "top_appbar_text_field"
    const val DROPDOWN_SELECT = "dropdown_select"
...
    const val THEME_COLOR_COBALT_BLUE = "theme_color_cobalt_blue"

    // Note lists test tags
    const val ADD_NOTE_FAB = "add_note_fab"
    const val NOTE_RV = "note_rv"
    const val LOADING_DIALOG = "loading_dialog"
    const val CONFIRMATION_DIALOG = "confirmation_dialog"
    const val PIN_ICON_BUTTON = "pin_icon_button"

    // Dialog Button
    const val CONFIRM_BUTTON = "confirm_button"
    const val DISMISS_BUTTON = "dismiss_button"

    // Note Detail test tags
    const val EDIT_ICON_BUTTON = "edit_icon_button"
    const val SAVE_ICON_BUTTON = "save_icon_button"
    const val CANCEL_ICON_BUTTON = "cancel_icon_button"
    const val SHARE_ICON_BUTTON = "share_icon_button"
    const val BACK_ICON_BUTTON = "back_icon_button"
    const val TITLE_TEXT_FIELD = "title_text_field"
    const val BODY_TEXT_FIELD = "body_text_field"
    const val DATE_TEXT = "date_text"
    const val TITLE_TEXT = "title_text"
    const val BODY_TEXT = "body_text"
    const val TAG_NAME_FIELD = "tag_name_field"
}
